more user informative

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
         <button id="extrudeShape">Extrude Shape</button>
         <button id="moveMode">Move</button>
         <button id="vertexEditMode">Vertex Edit</button>
+        <button id="resetScene">Reset</button>
         <div id="modeIndicator">Current Mode: Draw</div>
     </div>
     <div id="instructions">
         Draw Mode: Left-click to add points, Right-click to close shape<br>
         Extrude Mode: Click on the Extrude Shape button<br>
         Move Mode: Click and drag the object<br>
-        Vertex Edit Mode: Click and drag vertices
+        Vertex Edit Mode: Click and drag vertices<br>
+        Reset Mode: Click on the Reset button
     </div>
     <script src="script.js"></script>
 </body>
